@@ -1,3 +1,14 @@
+2008-06-16  Alp Toker  <alp@nuanti.com>
+
+        Rubber-stamped by Geoff.
+
+        Change c++ to c in minidom and testapi emacs mode line comments.
+
+        * API/Node.h:
+        * API/NodeList.c:
+        * API/NodeList.h:
+        * API/testapi.c:
+
 2008-06-16  Alexey Proskuryakov  <ap@webkit.org>
 
         Trying to fix Windows build.
